[package]
name = "bba-cli"
version = "0.2.1"
edition = "2021"
authors = ["Rick Wilson"]
description = "Bridge Bidding Analyzer CLI - generates auctions for PBN files using native EPBot engine"
license = "MIT"
repository = "https://github.com/Rick-Wilson/BBA-Tools"
keywords = ["bridge", "bidding", "pbn", "card-game"]
categories = ["command-line-utilities", "games"]

[dependencies]
# Shared EPBot engine
epbot-core = { path = "../epbot-core" }

# Bridge types and PBN parsing
bridge-parsers = { path = "../../Bridge-Parsers" }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# JSON for output compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "bba-cli"
path = "src/main.rs"
