[package]
name = "bba-server"
version = "2.0.1"
edition = "2021"
authors = ["Rick Wilson"]
description = "BBA Server - Bridge Bidding Analyzer API using native EPBot engine"
license = "MIT"

[dependencies]
# Shared EPBot engine
epbot-core = { path = "../epbot-core" }

# Web framework (matching bridge-classroom stack)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for fetching conventions from GitHub)
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto (for IP anonymization)
sha2 = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "bba-server"
path = "src/main.rs"
